<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:icon="@drawable/ic_hexagon_quad_empty"
    android:title="dropdownMenu"
    app:showAsAction="ifRoom">

    <menu>
        <item
            android:id="@+id/submenuHideShow"
            android:title="@string/hideShowExercises"/>
        <item
            android:id="@+id/logInCalendar"
            android:title="@string/logInCalendar"/>
        <item
            android:id="@+id/submenuShare"
            android:title="@string/share"/>

        <item
            android:title="@string/load">
            <menu>
                <item
                    android:id="@+id/importFromFile"
                    android:title="@string/fromFile"/>
                <item
                    android:id="@+id/importFromArchive"
                    android:title="@string/fromAppsMemory"/>

            </menu>
        </item>
        <item
            android:title="@string/save">
            <menu>
                <item
                    android:id="@+id/exportToFile"
                    android:title="@string/toFile"/>
                <item
                    android:id="@+id/exportToArchive"
                    android:title="@string/toAppsMemory"/>
            </menu>
        </item>


    </menu>
</item>
</menu>