<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:animateLayoutChanges="true"
    tools:context=".AddExerciseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/select"
            app:cornerRadius="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Spinner
            android:id="@+id/edtIso"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:entries="@array/isometric"
            android:popupBackground="@color/grey_700"
            android:background="@drawable/spinner"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/edtSets"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/isometricAdd"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imgIso"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

        <EditText
            android:id="@+id/edtTempo"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/hintOptional"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/edtSets"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/tempo"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imgTempo"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

        <ImageView
            android:id="@+id/imgMuscleGroupSecondaryE"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

        <ImageView
            android:id="@+id/imgBreaks"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

        <ImageView
            android:id="@+id/imgMuscleGroupE"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

        <EditText
            android:id="@+id/edtExerciseName"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/exerciseName"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgExerciseName"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_hexagon_double_vertical_empty"
            app:layout_constraintBottom_toBottomOf="@id/edtExerciseName"
            app:layout_constraintRight_toLeftOf="@id/edtExerciseName"
            app:layout_constraintTop_toTopOf="@id/edtExerciseName" />

        <Spinner
            android:id="@+id/edtSets"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:popupBackground="@color/grey_700"
            android:background="@drawable/spinner"
            android:ems="10"
            android:entries="@array/setsNumber"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <EditText
            android:id="@+id/edtMuscleGroupE"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintOptional"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/edtSets"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/edtMuscleGroupSecondaryE"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintOptional"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/edtMuscleGroupE"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/sets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtExerciseName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/muscleGroup"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/muscleGroupSecondary"
            app:layout_constraintEnd_toStartOf="@+id/edtMuscleGroupSecondaryE"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btnAddNewExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add"
            app:cornerRadius="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/breaks"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/edtTxtBreaks"
            style="@style/EditTextStyle"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="time"
            android:text="120"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/edtMuscleGroupSecondaryE"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="120" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seconds"
            app:layout_constraintBottom_toBottomOf="@+id/edtTxtBreaks"
            app:layout_constraintStart_toEndOf="@+id/edtTxtBreaks"
            app:layout_constraintTop_toTopOf="@+id/edtTxtBreaks" />

        <ImageView
            android:id="@+id/imgSets"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/ic_hexagon_double_vertical_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>