<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    tools:context=".view.AddWorkoutActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/imgWorkoutType"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_hexagon_single_empty"
            app:layout_constraintStart_toStartOf="@+id/guide15"
            app:layout_constraintTop_toBottomOf="@+id/tilWorkoutName"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imgMuscleGroup"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_hexagon_single_empty"
            app:layout_constraintStart_toStartOf="@+id/imgWorkoutType"
            app:layout_constraintTop_toBottomOf="@+id/imgWorkoutType"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imgMuscleGroupSecondary"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_hexagon_single_empty"
            app:layout_constraintStart_toStartOf="@+id/imgMuscleGroup"
            app:layout_constraintTop_toBottomOf="@+id/imgMuscleGroup"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWorkoutName"
            style="@style/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/workoutName"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="@id/guide85"
            app:layout_constraintStart_toStartOf="@id/guide15"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/edtWorkoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgWorkoutName"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_hexagon_single_empty"
            app:layout_constraintBottom_toBottomOf="@id/tilWorkoutName"
            app:layout_constraintEnd_toStartOf="@+id/tilWorkoutName"
            app:layout_constraintTop_toTopOf="@id/tilWorkoutName"
            tools:ignore="ContentDescription" />

<!--        <Spinner-->
<!--            android:id="@+id/spinnerWorkoutType"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:background="@drawable/spinner"-->
<!--            android:entries="@array/workoutTypes"-->
<!--            android:popupBackground="@color/grey_700"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/textView"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/guide85"-->
<!--            app:layout_constraintTop_toTopOf="@+id/textView" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWorkoutType"
            android:layout_width="0dp"
            style="@style/textInputStyleDropdown"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/type"
            app:layout_constraintBottom_toBottomOf="@id/imgWorkoutType"
            app:layout_constraintEnd_toStartOf="@+id/guide85"
            app:layout_constraintStart_toEndOf="@id/imgMuscleGroup"
            app:layout_constraintTop_toTopOf="@id/imgWorkoutType">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtWorkoutType"
                android:inputType="none"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMuscleGroup"
            style="@style/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/muscleGroup"
            app:endIconMode="clear_text"
            app:helperText="@string/hintOptional"
            app:layout_constraintBottom_toBottomOf="@id/imgMuscleGroup"
            app:layout_constraintEnd_toEndOf="@+id/tilWorkoutType"
            app:layout_constraintStart_toEndOf="@id/imgMuscleGroup"
            app:layout_constraintTop_toTopOf="@id/imgMuscleGroup"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMuscleGroup"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMuscleGroupSecondary"
            style="@style/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/muscleGroupSecondary"
            app:endIconMode="clear_text"
            app:helperText="@string/hintOptional"
            app:layout_constraintBottom_toBottomOf="@id/imgMuscleGroupSecondary"
            app:layout_constraintEnd_toEndOf="@+id/tilWorkoutType"
            app:layout_constraintStart_toEndOf="@id/imgMuscleGroupSecondary"
            app:layout_constraintTop_toTopOf="@id/imgMuscleGroupSecondary"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMuscleGroupSecondary"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add"
            app:cornerRadius="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilMuscleGroupSecondary" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>